# AlphaRelate

./: .gitignore  CMakeLists.txt  Makefile  NEWS  README
example/: .gitignore  AlleleFreqTest.txt  AlphaRelateSpec.txt  Genotype.txt  MarkerWeights.txt  Pedigree.txt  PedigreeInbreeding.txt  PedigreeUnsorted.txt
example/Data/: .gitignore  AlphaSimSpec.txt  CreateExampleData.R  ExampleArrayGenotype.txt  ExampleArrayHaplotype.txt  ExampleArrayMap.txt  ExampleGeneration.txt  ExamplePedigree.txt  ExamplePedigreeIncomplete.txt  ExampleSequenceGenotype.txt  ExampleSequenceHaplotype.txt  ExampleSequenceMap.txt  ExampleSequenceNSegSites.txt  TinyExampleGenotype.txt  TinyExamplePedigree.txt
example/Example0Tiny/: AlleleFreq.txt  AlphaRelateSpec.txt  GenotypeNrm.txt  PedigreeNrm.txt
example/Example1Pedigree/: AlphaRelateSpec.txt  PedigreeNrm.txt
example/Example2PedigreeIncomplete/: AlphaRelateSpecWithYob.txt  AlphaRelateSpecWithoutYob.txt  PedigreeInbreedingWithYob.txt  PedigreeInbreedingWithoutYob.txt  PedigreeNrm.txt  PedigreeNrmWithYob.txt
example/Legara2009/: AlphaRelateSpec.txt
src/: AlphaAGH.f90  AlphaRelate.f90  AlphaRelateMod.f90  AlphaRelateModule.f90  CMakeLists.txt
test/: AFullMatrixOld.txt  AlphaAGHSpec.txt  Genotype.txt  Pedigree.txt
test/Legara2009/: AlphaAGHSpec.txt  Genotype.txt  Pedigree.txt
tests/: AlphaRelateMod.pf  TestAlphaRelateModule.pf  testSuites.inc
