SET(ALPHARELATE_src
  ${SRCALPHAIMPUTE}AlphaRelateModule.f90
  ${SRCALPHAIMPUTE}AlphaRelate.f90
)

ADD_DEFINITIONS(-D COMMIT=${VERSION})
ADD_EXECUTABLE(${ALPHARELATEEXE} ${ALPHARELATE_src})

set(TESTPROG testProg)

# add external links here
TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${AHLIB})
TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${RESULT})

# TARGET_LINK_LIBRARIES(${TESTPROG} ${RESULT})
INSTALL(TARGETS ${ALPHARELATEEXE} RUNTIME DESTINATION bin)
