SET(ALPHARELATE_src
  ${SRCALPHAIMPUTE}AlphaRelateModule.f90
  ${SRCALPHAIMPUTE}AlphaRelate.f90
)

ADD_DEFINITIONS(-D COMMIT=${VERSION})
ADD_EXECUTABLE(${ALPHARELATEEXE} ${ALPHARELATE_src})

set(TESTPROG testProg)

# add external links here
TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${AHLIB})
TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${MKL_BLAS_LIB})

	TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${MKL_LAPACK_LIB})

if (${MKL_SCALAPACK_LIB})
	TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${MKL_SCALAPACK_LIB})
endif()
TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${MKL_ILP_LIB})
TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${MKL_THREAD_LIB})
TARGET_LINK_LIBRARIES(${ALPHARELATEEXE} ${MKL_CORE_LIB})

# TARGET_LINK_LIBRARIES(${TESTPROG} ${RESULT})
INSTALL(TARGETS ${ALPHARELATEEXE} RUNTIME DESTINATION bin)
